# pcfbench

./: .gitignore  LICENSE  README.md  pyproject.toml
pcfbench/: sweep_all.py
pcfbench/agents/: _common.py  decomposition.py  epd.py  extraction.py  mapping.py  parakeet.py  runner.py  stepwise.py  triage.py
pcfbench/evals/: runner.py
pcfbench/models/: factory.py  pricing.py  registry.py  vertex_auth.py
pcfbench/picklist/: README.md  build_picklist_json.py  ecoinvent_picklist.jsonl  embed_gemini.py  embed_gte.py  embedding_model_gemini.txt
pcfbench/scoring/: calibration.py  decomposition.py  epd.py  extraction.py  mapping.py  stepwise.py  triage.py  unit_normalization.py
pcfbench/tools/: ecoinvent_tools.py  material_library.py  picklist_material.py  search_tracker.py
